2012-09-25 Vanessa Gil <vanessa.gil@artica.es>

	* util/tool_api.pl: Added file to create events using API.

2012-09-17  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for inverse intervals when calculating
	  the status of a module.

2012-09-17 Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Added new fields
	to modules.

2012-09-13  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Generate events when a
	module changes to unknown status

2012-09-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/iface_bandwith.pl: First version of 
	iface bandwith server plugin.

2012-09-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: changed to use own code instead the
	external module Time::Piece.
	
	* lib/PandoraFMS/Tools.pm: added function "month_have_days" for
	to get the count of days for any month in any year.

2012-09-10 Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Added several fields
	to events.

2012-08-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: refactoriced the code for the new Planned
	Downtime, now check the downtimes once and periodical and the
	subtypes of downtimes.
	
	* bin/pandora_server: cleaned source code style.

2012-08-29  Sergio Martin <sergio.martin@artica.es>

	* DEBIAN/control
	Makefile.PL
	pandora_server.spec
	pandora_server.redhat.spec: Added the perl JSON dependence
	to specs and the check to Makefile

2012-08-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: added in the modules the same feature to
	set agent in "Quiet" mode.

2012-08-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Server.pm:: added the feature to set a agent in
	"Quiet" mode.
	
	* lib/PandoraFMS/Core.pm, bin/pandora_server: cleaned source code
	style.

2012-08-20  Sergio Martin <sergio.martin@artica.es>

	* ChangeLog: Fixed bad description in last commit
